--- a/nginx.conf
+++ b/nginx.conf
@@ -6,6 +6,17 @@ events {
 }
 
 http {
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
+    server_tokens off;
+    # server_names_hash_bucket_size 64;
+    # server_name_in_redirect off;
+    client_max_body_size 0;
+    include mime.types;
+    default_type application/octet-stream;
     server {
         listen       80;
         server_name  localhost;
